WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
201944
[LFC] FormattingContext::Geometry/MarginCollapse/Quirk classes should not need to access non-const Display::Box
https://bugs.webkit.org/show_bug.cgi?id=201944
Summary
[LFC] FormattingContext::Geometry/MarginCollapse/Quirk classes should not nee...
alan
Reported
2019-09-18 14:36:22 PDT
Make them cost correct.
Attachments
Patch
(19.83 KB, patch)
2019-09-18 14:46 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(19.83 KB, patch)
2019-09-18 15:07 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-09-18 14:38:40 PDT
<
rdar://problem/55493279
>
alan
Comment 2
2019-09-18 14:46:07 PDT
Created
attachment 379075
[details]
Patch
alan
Comment 3
2019-09-18 15:07:11 PDT
Created
attachment 379078
[details]
Patch
WebKit Commit Bot
Comment 4
2019-09-18 16:33:15 PDT
Comment on
attachment 379078
[details]
Patch Clearing flags on attachment: 379078 Committed
r250064
: <
https://trac.webkit.org/changeset/250064
>
WebKit Commit Bot
Comment 5
2019-09-18 16:33:16 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug